force-app/main/default/objects/Consultation__c/Consultation__c.object-meta.xml
<CustomObject>
    <label>Consultation</label>
    <nameField>
        <label>Consultation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>