force-app/main/default/objects/Consultation__c/fields/Request_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Request_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request Meeting with the Manager.</description>
    <inlineHelpText>Request Meeting with the Manager.</inlineHelpText>
    <label>Request Meeting</label>
    <type>Checkbox</type>
</CustomField>