force-app/main/default/objects/Consultation__c/validationRules/Record_created_must_be_in_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_created_must_be_in_New</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Status__c, &quot;Pending&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>When creating a new record, the status must be &apos;Pending&apos;.</errorMessage>
</ValidationRule>